<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/ivPhotoProfile"
        android:layout_width="@dimen/grid_6"
        android:layout_height="@dimen/grid_6"
        app:srcCompat="@drawable/humano"
        android:layout_marginTop="@dimen/grid_4"
        android:scaleType="fitCenter"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/tvTitleWelcomeUser"
        android:layout_width="@dimen/grid_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_3"
        tools:text="@string/label_welcome_user"
        android:textAppearance="@style/Body2"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/ivPhotoProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="@dimen/grid_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_4"
        android:layout_marginHorizontal="@dimen/grid_4"
        app:layout_constraintTop_toBottomOf="@id/tvTitleWelcomeUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_hint_set_email"
            android:inputType="text|textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhoneNumber"
        android:layout_width="@dimen/grid_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_3"
        android:layout_marginHorizontal="@dimen/grid_4"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_hint_set_phone_number"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdateData"
        android:layout_width="@dimen/grid_0"
        android:layout_height="wrap_content"
        android:text="@string/label_button_update_data"
        android:layout_marginTop="@dimen/grid_2"
        android:layout_marginHorizontal="@dimen/grid_4"
        app:layout_constraintTop_toBottomOf="@+id/tilPhoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogOut"
        android:layout_width="@dimen/grid_0"
        android:layout_height="wrap_content"
        android:text="@string/label_button_logout"
        android:layout_marginTop="@dimen/grid_2"
        android:layout_marginHorizontal="@dimen/grid_4"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>